# CryptoMessari-deploy

./: .env.example  .gitignore  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: config.py  database.py
app/models/: __init__.py  asset.py  asset_metrics.py  asset_profile.py  global_metrics.py  price_history.py  scheduler_log.py
app/repositories/: asset_metrics_repo.py  asset_profile_repo.py  asset_repo.py  global_metrics_repo.py  price_history_repo.py  scheduler_log_repo.py
app/scheduler/: jobs.py  scheduler.py
app/services/: coingecko_service.py  messari_service.py
app/utils/: logger.py
scripts/: check_db.py  init_db.py  run_once.py  run_scheduler.py
tests/: test_messari_service.py
